test/error/iocheck/err4.rzy
// Error: query is not allowed to write state


interface
  IfaceQuerry
    function query():R{0,100};
  end
  
component
  Err4
    input
      in  : IfaceQuerry;
    
    implementation hfsm(A)
    
    var
      a : R{0,100};
    
    entry
      a := 0;
    end
    
    state A
      function in.query():R{0,100}
        a := 42;
        return 0;
      end
    end
    
  end

